@@ -4,7 +4,8 @@ Changelog
 1.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix querystring of suggestions with list parameters.
+  [buchi]
 
 
 1.2.2 (2013-09-24)
